--- a/e-wallet/user_service/src/main/resources/application.properties
+++ b/e-wallet/user_service/src/main/resources/application.properties
@@ -13,4 +13,7 @@ spring.kafka.producer.bootstrap-servers = localhost:9092
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
 
+logging.level.org.springframework.cache=DEBUG
+logging.level.org.springframework.data.redis=DEBUG
+
 
